testsuite/tests/typecheck/should_fail/T17594g.stderr

T17594g.hs:6:5: error: [GHC-14964]
    • Invisible type pattern a has no associated forall
    • In an equation for ‘id'’: id' @a x = x
